feat(doublets): Return both items if there is only one differing character